--- a/templates/Testing _Jasmine_Protractor_.xml
+++ b/templates/Testing _Jasmine_Protractor_.xml
@@ -229,7 +229,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="waitForAngular" value="browser.waitForAngular();" description="wait for angular browser()" toReformat="false" toShortenFQNames="true">
+  <template name="waitforangular" value="browser.waitForAngular();" description="wait for angular browser()" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
