--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -1,5 +1,5 @@
 <templateSet group="MichaelChinn">
-  <template name="gulptask" value="'use strict';&#10;var gulp = require('gulp');&#10;&#10;gulp.task('$task$', [], function() {&#10;    $END$&#10;}); " description="creates a gulp task" toReformat="false" toShortenFQNames="true">
+  <template name="gulptask" value="gulp.task('$task$', [], function() {&#10;    $END$&#10;}); " description="creates a gulp task" toReformat="false" toShortenFQNames="true">
     <variable name="task" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
@@ -167,6 +167,14 @@
     <context>
       <option name="HTML_TEXT" value="true" />
       <option name="HTML" value="true" />
+    </context>
+  </template>
+  <template name="gulpstart" value="'use strict';&#10;var gulp = require('gulp);&#10;$END$" description="starter for gulp" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
 </templateSet>
