WS-11.0.4 <Michael Chinn@kaunas Update Testing _Jasmine_Protractor_.xml

--- a/templates/Testing _Jasmine_Protractor_.xml
+++ b/templates/Testing _Jasmine_Protractor_.xml
@@ -246,9 +246,8 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="xtruthy" value="expect($cond$).toBeTruthy($cond2$);$END$" description="expect to by truthy" toReformat="false" toShortenFQNames="true">
+  <template name="xtruthy" value="expect($cond$).toBeTruthy();$END$" description="expect to by truthy" toReformat="false" toShortenFQNames="true">
     <variable name="cond" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="cond2" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
@@ -256,7 +255,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="xfalsey" value="expect($cond$).toBeFalsey($cond$);$END$" description="expect to be falsey" toReformat="false" toShortenFQNames="true">
+  <template name="xfalsey" value="expect($cond$).toBeFalsey();$END$" description="expect to be falsey" toReformat="false" toShortenFQNames="true">
     <variable name="cond" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
