--- a/templates/MichaelChinn Gulp.xml
+++ b/templates/MichaelChinn Gulp.xml
@@ -51,4 +51,12 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name=".pipe" value=".pipe($END$)" description=".pipe()" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
