WS-11.0.4 <Michael Chinn@kaunas Update find.xml, MichaelChinn Angular.xml

--- a/templates/MichaelChinn Angular.xml
+++ b/templates/MichaelChinn Angular.xml
@@ -77,11 +77,28 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name=".state" value="state('$name$', {&#10;    url: '/$name$',&#10;    parent: '$parent$',&#10;    views: {&#10;        '$loc$': {&#10;            templateUrl: '$whr$',&#10;            controller: '$con$Controller as vm'&#10;        }&#10;    }&#10;    })" description=".state" toReformat="false" toShortenFQNames="true">
+  <template name=".state" value=".state('$name$', {&#10;    url: '/$name$',&#10;    parent: '$parent$',&#10;    views: {},&#10;    resolve: {}&#10;    templateUrl: '$url$.html',&#10;    controller: '$name$Controller as vm'&#10;})" description=".state" toReformat="false" toShortenFQNames="true">
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="parent" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="loc" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="whr" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="url" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="ctrlfunction" value="vm.$name$ = $name$;&#10;&#10;function $name$() {&#10;    $END$&#10;}" description="function inside controller with vm convention" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="templateroute" value="templateUrl: '$dest$',&#10;controller: '$con$Controller as vm'" description="templateUrl and controller" toReformat="false" toShortenFQNames="true">
+    <variable name="dest" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="con" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
