--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -169,4 +169,13 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="iterator" value="for(var i = 0; i &lt; $limit$; i+=1) {&#10;    $END$&#10;}" description="for iteratior with i" toReformat="false" toShortenFQNames="true">
+    <variable name="limit" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
