--- a/templates/MichaelChinn Angular.xml
+++ b/templates/MichaelChinn Angular.xml
@@ -77,7 +77,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name=".state" value=".state('$name$', {&#10;    url: '/$name$',&#10;    parent: '$parent$',&#10;    views: {},&#10;    resolve: {}&#10;    templateUrl: '$url$.html',&#10;    controller: '$name$Controller as vm'&#10;})" description=".state" toReformat="false" toShortenFQNames="true">
+  <template name=".state" value=".state('$name$', {&#10;    url: '/$name$',&#10;    parent: '$parent$',&#10;    resolve: {}&#10;    templateUrl: '$url$.html',&#10;    controller: '$name$Controller as vm'&#10;})" description=".state" toReformat="false" toShortenFQNames="true">
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="parent" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="url" expression="" defaultValue="" alwaysStopAt="true" />
@@ -100,6 +100,16 @@
   <template name="templateroute" value="templateUrl: '$dest$',&#10;controller: '$con$Controller as vm'" description="templateUrl and controller" toReformat="false" toShortenFQNames="true">
     <variable name="dest" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="con" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="views" value="views: {&#10;    '$name$@$location$' :{$END$}&#10;}" description="views state object" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="location" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
