WS-11.0.4 <Michael Chinn@kaunas Update MichaelChinn Angular.xml

--- a/templates/MichaelChinn Angular.xml
+++ b/templates/MichaelChinn Angular.xml
@@ -77,7 +77,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name=".state" value=".state('$name$', {&#10;    url: '/$name$',&#10;    parent: '$parent$',&#10;    resolve: {}&#10;    templateUrl: '$url$.html',&#10;    controller: '$name$Controller as vm'&#10;})" description=".state" toReformat="false" toShortenFQNames="true">
+  <template name=".state" value=".state('$name$', {&#10;    url: '/$name$',&#10;    parent: '$parent$',&#10;    resolve: {}&#10;    templateUrl: '$url$/$name$.html',&#10;    controller: '$name$Controller as vm'&#10;})" description=".state" toReformat="false" toShortenFQNames="true">
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="parent" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="url" expression="" defaultValue="" alwaysStopAt="true" />
