WS-11.0.4 <Michael Chinn@kaunas Update MichaelChinn.xml

--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -187,4 +187,12 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="iffyus" value="(function () {&#10;    'use strict';&#10;    $END$&#10;}) ();" description="immediate function and use strict" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
