--- a/templates/MichaelChinn Gulp.xml
+++ b/templates/MichaelChinn Gulp.xml
@@ -8,7 +8,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="gulptask" value="gulp.task('$task$', [], function() {&#10;    return gulp.src($END$)&#10;    .pipe(gulp.dest());&#10;}); " description="creates a gulp task" toReformat="false" toShortenFQNames="true">
+  <template name="gulptask" value="gulp.task('$task$', [], function() {&#10;    return gulp.src()&#10;    .pipe(gulp.dest());$END$&#10;}); " description="creates a gulp task" toReformat="false" toShortenFQNames="true">
     <variable name="task" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
@@ -59,7 +59,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="gulpstandard" value="var gulp = require('gulp');&#10;var $ = require('gulp-load-plugins')({&quot;lazy&quot;: true});&#10;var config = require('../config.js');&#10;var paths = config.paths;&#10;$END$" description="convential gulp plugins and config" toReformat="false" toShortenFQNames="true">
+  <template name="gulpstandard" value="var gulp = require('gulp');&#10;var $ = require('gulp-load-plugins')({&quot;lazy&quot;: true});&#10;var config = require('../config.js');$END$" description="convential gulp plugins and config" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
@@ -71,6 +71,15 @@
     <variable name="files" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="index" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="endpoint" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="gulpwatch" value="gulp.watch('$filePath$', function(event) {&#10;    return console.log('File ' + event.path + ' was ' + event.type + ', running tasks...');&#10;});" description="gulp watcher" toReformat="false" toShortenFQNames="true">
+    <variable name="filePath" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
