--- a/templates/MichaelChinn Angular.xml
+++ b/templates/MichaelChinn Angular.xml
@@ -126,4 +126,14 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="$httpget" value="function get$thing$(request) {&#10;    return $http.get(config.apiUrl + '/$url$', {params: request$END$})&#10;        .then(function (response) {&#10;            return response.data;&#10;        });&#10;}" description="get request" toReformat="false" toShortenFQNames="true">
+    <variable name="thing" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="url" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
