WS-11.0.4 <Michael Chinn@kaunas Update find.xml, MichaelChinn.xml

--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -195,4 +195,12 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="mockData" value="if(config.mockData) {&#10;    return $END$;&#10;}" description="mock data for my apps" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
