--- a/templates/MichaelChinn Gulp.xml
+++ b/templates/MichaelChinn Gulp.xml
@@ -67,7 +67,7 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="gulpinject" value="gulp.task('inject', [], function() {&#10;    var files = gulp.src('$files$');&#10;    return gulp.src('$index$')&#10;        .pipe($.inject(files, {relative: true}))&#10;        .pipe(gulp.dest('$endpoint$'));$END$&#10;});" description="inject task" toReformat="false" toShortenFQNames="true">
+  <template name="gulpinject" value="gulp.task('inject', [], function() {&#10;    var files = gulp.src($files$);&#10;    return gulp.src($index$)&#10;        .pipe($.inject(files, {relative: true}))&#10;        .pipe(gulp.dest($endpoint$));$END$&#10;});" description="inject task" toReformat="false" toShortenFQNames="true">
     <variable name="files" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="index" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="endpoint" expression="" defaultValue="" alwaysStopAt="true" />
@@ -78,8 +78,8 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="gulpwatch" value="gulp.watch('$filePath$', function(event) {&#10;    return console.log('File ' + event.path + ' was ' + event.type + ', running tasks...');&#10;});" description="gulp watcher" toReformat="false" toShortenFQNames="true">
-    <variable name="filePath" expression="" defaultValue="" alwaysStopAt="true" />
+  <template name="gulpdelete" value="gulp.task($name$, [], function() {&#10;    return del($END$);&#10;});" description="del function for gulp" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
