WS-11.0.4 <Michael Chinn@kaunas Update MichaelChinn Gulp.xml

--- a/templates/MichaelChinn Gulp.xml
+++ b/templates/MichaelChinn Gulp.xml
@@ -67,8 +67,9 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="gulpinject" value="gulp.task('inject', [], function() {&#10;    var files = gulp.src($files$);&#10;    return gulp.src($index$)&#10;        .pipe($.inject(files, {relative: true}))&#10;        .pipe(gulp.dest($endpoint$));$END$&#10;});" description="inject task" toReformat="false" toShortenFQNames="true">
+  <template name="gulpinject" value="gulp.task('inject', [], function() {&#10;    var files = gulp.src($files$)&#10;        .pipe(gulp.dest($dest$));&#10;        &#10;    return gulp.src($index$)&#10;        .pipe($.inject(files, {relative: true, ignorePath: ''}))&#10;        .pipe(gulp.dest($endpoint$));$END$&#10;});" description="inject task" toReformat="false" toShortenFQNames="true">
     <variable name="files" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="dest" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="index" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="endpoint" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
